updated getData function so it handles a Event Emitter for a better code, updated SCSS to be mobile first, fixed pagination position problem on mobile

--- a/front/src/app/home/home.page.scss
+++ b/front/src/app/home/home.page.scss
@@ -27,49 +27,92 @@ ion-content {
     }
   }
 
-  .display-flex {
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: nowrap;
-  }
-
-  .hr-black {
-    border-bottom: 1px solid black;
-    margin-left: 11px;
-  }
-
-  .hr-blue {
-    border-bottom: 1px solid #3880ff;
-    width: 50%;
-  }
-
   .spinner-container {
     width: 100%;
     text-align: center;
     padding: 10px;
   }
-
-  .display-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(388px, 1fr));
-    grid-column-gap: 30px;
-    text-align: center;
-
-    ion-card-content {
-      text-align: justify;
-    }
-  }
 }
 
 ion-footer {
+  .styleReset-ul {
+    margin-left: -40px;
+  }
+
   pagination-controls {
     display: flex;
     justify-content: center;
   }
 }
 
-@media (max-width: 640px) {
-  .display-grid {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+
+@media (min-width: 1281px) {
+  ion-content {
+    .display-flex {
+      display: flex;
+      justify-content: flex-start;
+      flex-wrap: nowrap;
+    }
+
+    .hr-black {
+      border-bottom: 1px solid black;
+      margin-left: 11px;
+    }
+
+    .hr-blue {
+      border-bottom: 1px solid #3880ff;
+      width: 50%;
+    }
+
+    .display-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(388px, 1fr));
+      grid-column-gap: 30px;
+      text-align: center;
+
+      ion-card-content {
+        text-align: justify;
+      }
+    }
+  }
+}
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+  ion-content {
+    .display-flex {
+      display: flex;
+      justify-content: flex-start;
+      flex-wrap: nowrap;
+    }
+
+    .hr-black {
+      border-bottom: 1px solid black;
+      margin-left: 11px;
+    }
+
+    .hr-blue {
+      border-bottom: 1px solid #3880ff;
+      width: 50%;
+    }
+
+    .display-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(388px, 1fr));
+      grid-column-gap: 30px;
+      text-align: center;
+
+      ion-card-content {
+        text-align: justify;
+      }
+    }
   }
 }
